# comuniveci_post_service

./: .env.example  .gitignore  CHANGELOG.md  README.md  manage.py  pyproject.toml
communiveci_post_service/: asgi.py  settings.py  urls.py  wsgi.py
posts/domain/: models.py  repositories.py
posts/infrastructure/api/: urls.py  views.py
posts/infrastructure/persistence/: db.py  get_repository.py  in_memory_repository.py  mongo_repository.py
posts/infrastructure/serializers/: post_serializer.py
posts/usecases/: approve_post.py  create_post.py  delete_post.py  get_approved_posts.py  get_post_summary.py  get_posts_by_user_email.py  list_pending_posts.py  update_post.py
